# jsd-foreign-libraries-configuration

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SFML.patch  clear_before_add.sh  clone-all-submodules.sh  patch-everything.sh  prepare-system-environment.sh  update-all-submodules.sh  zlib.patch
